[tool.poetry]
name = "hot-shelve"
version = "0.2.0b0"
description = "A wrapper for Python shelve that supports updating nested dictionaries in a simple way."
readme = "README.md"
homepage = "https://github.com/likianta/hot-shelve"
authors = ["likianta <likianta@foxmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"
